<resources>
    <string name="app_name">My Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nanodegree_app_header_textview">Nanodegree App</string>
    <string name="spotify_app_name">Spotify Streamer</string>
    <string name="football_app_button">Football Scores</string>
    <string name="library_app_button">Library App</string>
    <string name="build_it_app_button">Build It Bigger</string>
    <string name="xyz_app_button">XYZ Reader</string>
    <string name="capstone_app_button">Capstone: Final App</string>
</resources>
