<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nanodegree_app_header_textview"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spotify_button"
        android:text="@string/spotify_app_name"
        android:layout_below="@+id/title_textview"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        style="@style/buttonStyle"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scores_button"
        android:text="@string/football_app_button"
        android:layout_below="@+id/spotify_button"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        style="@style/buttonStyle"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/library_button"
        android:text="@string/library_app_button"
        android:layout_below="@+id/scores_button"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        style="@style/buttonStyle"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/build_it_button"
        android:text="@string/build_it_app_button"
        android:layout_below="@+id/library_button"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        style="@style/buttonStyle"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reader_button"
        android:text="@string/xyz_app_button"
        android:layout_below="@+id/build_it_button"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        style="@style/buttonStyle"
        />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/final_app_button"
        android:text="@string/capstone_app_button"
        android:layout_below="@+id/reader_button"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        style="@style/buttonStyle"
        android:background="#FF0000"
        android:textColor="#FFFFFF"
        />

</RelativeLayout>
